# fossdev

lesson1/: .gitignore  Makefile  PracticeMakefile  README.md  docker-compose.yaml  script.py  test.py
lesson1/docs_domain/: Makefile
lesson1/docs_domain/docs/source/: QUICKSTART.md  USAGE.rst  conf.py  index.rst
lesson1/docs_domain/src/: sales.py
lesson1/homework1/: Makefile  README.md  requirements.txt
lesson1/homework1/src/: calc.py  service.py
lesson1/makeutil/capp/: Makefile  main.c
lesson1/ndfl_project/: Makefile  README.md  pyproject.toml
lesson1/order_service/: Dockerfile  Makefile  pyproject.toml
lesson1/product_service/: pyproject.toml
lesson1/testing/frameworks/: setup.py
lesson1/testing/frameworks/src/tax/: income.py
lesson1/testing/frameworks/src/tax.egg-info/: SOURCES.txt
lesson1/testing/frameworks/tests/tax/: test_income.py  test_income_pytest.py  test_income_unittest.py
lesson1/testing/principle/: setup.py
lesson1/testing/principle/src/: math_demo.py
lesson1/testing/principle/tests/: test_principles.py
lesson1/testing/tdd/: Makefile
lesson1/testing/tdd/src/: ndfl.py
lesson1/testing/tdd/tests/: test_basic_ndfl.py
