[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ndfl-calc-dmg"
version = "0.1.1"
authors = [
  { name="dmgdimas", email="zibelmand@gmail.com" },
]
description = "NDFL Tax Calculator for FOSSDEV project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools.packages.find]
where = ["src"]