[project]
name = "order-service"
version = "0.1.0"
description = "Application for serving users orders"
authors = [
    {name = "Dmitriy Gorbachev",email = "zibelmand@gmail.com"}
]
license = "MIT"
requires-python = "3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
