[project]
name = "order-service"
version = "0.1.0"
description = "Application for serving users orders"
authors = [
    {name = "Dmitriy Gorbachev",email = "zibelmand@gmail.com"}
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standart] (>=0.46.0,<0.47.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
